# relay

./: .gitignore  Dockerfile  MANIFEST.in  dev-requirements.txt  dev.py  docker.sh  pyproject.toml  relay.spec  relay.yaml.example  requirements.txt  setup.cfg  tox.ini
.github/workflows/: docker-publish.yml
docs/: commands.md  configuration.md  index.md  installation.md
installation/: relay.caddy  relay.nginx  relay.service
relay/: __main__.py  application.py  cache.py  compat.py  config.py  database.py  dev.py  http_client.py  logger.py  manage.py  misc.py  processors.py  state.py  template.py  views.py  workers.py
relay/cli/: __init__.py  base.py  config.py  inbox.py  instance_ban.py  request.py  software_ban.py  user.py  whitelist.py
relay/data/: statements.sql  swagger.yaml
relay/database/: __init__.py  config.py  connection.py  schema.py
relay/frontend/: base.haml  functions.haml  style.css
relay/frontend/page/: admin-config.haml  admin-domain_bans.haml  admin-instances.haml  admin-software_bans.haml  admin-users.haml  admin-whitelist.haml  docs.haml  error.haml  home.haml  login.haml
relay/frontend/static/: api.js  config.js  domain_ban.js  functions.js  instance.js  login.js  menu.js  software_ban.js  style.css  toast.css  toast.js  user.js  whitelist.js
relay/frontend/style/: config.css  domain_bans.css  home.css  instances.css  login.css  software_bans.css  users.css  whitelist.css
relay/views/: __init__.py  activitypub.py  api.py  base.py  frontend.py  misc.py
