[metadata]
name = relay
version = attr: relay.__version__
description = Generic LitePub relay (works with all LitePub consumers and Mastodon)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://git.pleroma.social/pleroma/relay
license = AGPLv3
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: AGPLv3 License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://git.pleroma.social/pleroma/relay
    Tracker = https://git.pleroma.social/pleroma/relay/-/issues

[options]
zip_safe = False
packages = 
    relay
    relay.database
include_package_data = true
install_requires = file: requirements.txt
python_requires = >=3.8

[options.extras_require]
dev =
    flake8 == 3.1.0
    pyinstaller == 6.3.0
    pylint == 3.0

[options.package_data]
relay =
    data/statements.sql

[options.entry_points]
console_scripts = 
    activityrelay = relay.manage:main


[flake8]
extend-ignore = ANN101,ANN204,E128,E251,E261,E266,E301,E303,W191
extend-exclude = docs, test*.py
max-line-length = 100
indent-size = 4
